# abp-digtwin-hooks

./: .pre-commit-hooks.yaml  README.md  hello.py  pyproject.toml
hooks/: cdf_deployment_dry_run.py
